# trinity_ai_friend_rag_fullstack

./: .env  README.md  docker-compose.yml  docker-deploy.bat  fix-images.bat  install-admin.bat  install-simple.bat  install-venv.bat  install.bat  run-all-venv.bat  run-all.bat  run-backend.bat  run-frontend.bat  setup-env.bat
backend/: .env  ai_manager.py  file_search_manager.py  main.py  pyproject.toml
backend/.langgraph_api/: .langgraph_ops.pckl
backend/data/: file_search_metadata.json
backend/src/agent/: app.py  graph.py  state.py
backend/src/agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/multi_ai_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/tools/: perplexity.py
backend/src/utils/: images.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
